# shadoXmonad

./: .gitignore  .xmonad-layout-log  :w  README.md  build  cool-example.hs  picom  prompt-history  setup  stack.yaml  xmonad-config.cabal  xmonad-layout  xmonad-old.hs  xmonad-x86_64-linux  xmonad.errors  xmonad.hi  xmonad.hs  xmonad.hs-dt  xmonad.hs-mine  xmonad.hs.bkp
.stack-work/: stack.sqlite3
.stack-work/install/x86_64-linux-tinfo6/2c1c32ccebe6ffe99076c9ed6d21e6952c4042384f2082283441927d37c3758e/8.8.4/lib/x86_64-linux-ghc-8.8.4/xmobar-0.37-7fjFQvqhGK3FT6ObbrAgKk/: Paths_xmobar.dyn_hi  Paths_xmobar.hi  Xmobar.dyn_hi  Xmobar.hi
.stack-work/install/x86_64-linux-tinfo6/2c1c32ccebe6ffe99076c9ed6d21e6952c4042384f2082283441927d37c3758e/8.8.4/lib/x86_64-linux-ghc-8.8.4/xmonad-0.15-GTM7qPfP9qe4dQ7qSXAysW/: Paths_xmonad.dyn_hi  (+3 more)
.stack-work/install/x86_64-linux-tinfo6/2c1c32ccebe6ffe99076c9ed6d21e6952c4042384f2082283441927d37c3758e/8.8.4/pkgdb/: package.cache  xmobar-0.37-7fjFQvqhGK3FT6ObbrAgKk.conf  xmonad-0.15-GTM7qPfP9qe4dQ7qSXAysW.conf  xmonad-contrib-0.16-2mRysj81FmXFXf4bw3MEk1.conf
.stack-work/install/x86_64-linux-tinfo6/6412e54345e975564344b5b8fbe61fa9d80345c9faa0b72b46652dab06e5116a/8.8.4/pkgdb/: package.cache  xmobar-0.37-6hKCQIPCYAMIhotJ4VYbqK.conf  xmonad-0.15-GTM7qPfP9qe4dQ7qSXAysW.conf  xmonad-contrib-0.16-2mRysj81FmXFXf4bw3MEk1.conf
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
lib/XMonad/Actions/: ConditionalKeys.hi
xpm/: cpu.xbm  cputest.xbm  cust_mem-module.xpm  test.kra
(+170 files in other folders)
