name:          xmonad-config
version:       0.0
synopsis:      XMonad Config File
homepage:      http://xmonad.org
license:       BSD2
license-file:  LICENSE
author:        Shadorain
maintainer:    Shadorain
copyright:     None
category:      Graphics
build-type:    Simple
cabal-version: >=1.8

executable xmonad-config
  main-is: xmonad.hs
  build-depends: base, xmonad, xmonad-contrib, containers
